--- a/ex.1/regression sataset folder/cleaning_data.ipynb
+++ b/ex.1/regression sataset folder/cleaning_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
     "import pandas as pd\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
-    "# Load the dataset\n",
+    "### Load the dataset\n",
     "file_path = \"ship_fuel_efficiency.csv\"  \n",
     "df = pd.read_csv(file_path)\n",
     "\n",
