--- a/ex.1/regression sataset folder/AutoViz.ipynb
+++ b/ex.1/regression sataset folder/AutoViz.ipynb
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# I tried different ways to solve this bag, but without result, I decided to use another tools simular to Autoviz (Sweetviz, Dataprep, D-Tale, Yellowbrick)"
+    "# I tried different ways to solve this bag, but without a result, I decided to use another tools simular to Autoviz (Sweetviz, Dataprep, D-Tale, Yellowbrick)"
    ]
   }
  ],
