--- a/ex.1/classification dataset folder/cleaning_data.ipynb
+++ b/ex.1/classification dataset folder/cleaning_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 369,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
        "9                                    5                       127  "
       ]
      },
-     "execution_count": 222,
+     "execution_count": 370,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 371,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 372,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 373,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
        "6                      1"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 373,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 374,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +887,7 @@
        "6                       0"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 374,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 375,
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
        "21             1"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 375,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 376,
    "metadata": {},
    "outputs": [
     {
@@ -1126,29 +1126,152 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>pet_health_issue_list</th>\n",
+       "      <th>dry_food_brand_pre_tails</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>54</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    dry_food_brand_pre_tails\n",
+       "51                         1\n",
+       "52                         1\n",
+       "53                         1\n",
+       "54                         1\n",
+       "55                         1\n",
+       "56                         0\n",
+       "57                         0\n",
+       "58                         0\n",
+       "59                         1\n",
+       "60                         1"
+      ]
+     },
+     "execution_count": 376,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Тransformation to 'pet_fav_flavour_list' column\n",
+    "# If there is any text (i.e., not empty or NaN), set it to 1; otherwise set it to 0\n",
+    "\n",
+    "data['pet_fav_flavour_list'] = data['pet_fav_flavour_list'].apply(\n",
+    "    lambda x: 1 if pd.notnull(x) and x != '' else 0\n",
+    ")\n",
+    "\n",
+    "# Same to the next column\n",
+    "data['pet_health_issue_list'] = data['pet_health_issue_list'].apply(\n",
+    "    lambda x: 1 if pd.notnull(x) and x != '' else 0\n",
+    ")\n",
+    "\n",
+    "# Same to the next column\n",
+    "data['dry_food_brand_pre_tails'] = data['dry_food_brand_pre_tails'].apply(\n",
+    "    lambda x: 1 if pd.notnull(x) and x != '' else 0\n",
+    ")\n",
+    "\n",
+    "# Same to the another column\n",
+    "data['pet_allergen_list'] = data['pet_allergen_list'].apply(\n",
+    "    lambda x: 1 if pd.notnull(x) and x != '' else 0\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# To display rows 51 to 60 of the 'dry_food_brand_pre_tails' column\n",
+    "data[['dry_food_brand_pre_tails']].iloc[51:61]  # Note: Python indexing is exclusive of the last index, so 66 will show up to row 65.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 377,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pet_allergen_list</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1170,50 +1293,116 @@
        "      <th>9</th>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   pet_health_issue_list\n",
-       "0                      1\n",
-       "1                      1\n",
-       "2                      1\n",
-       "3                      1\n",
-       "4                      1\n",
-       "5                      0\n",
-       "6                      0\n",
-       "7                      0\n",
-       "8                      0\n",
-       "9                      0"
+       "    pet_allergen_list\n",
+       "0                   0\n",
+       "1                   0\n",
+       "2                   0\n",
+       "3                   0\n",
+       "4                   0\n",
+       "5                   0\n",
+       "6                   0\n",
+       "7                   0\n",
+       "8                   0\n",
+       "9                   0\n",
+       "10                  0\n",
+       "11                  0\n",
+       "12                  0\n",
+       "13                  0\n",
+       "14                  0\n",
+       "15                  0\n",
+       "16                  0\n",
+       "17                  0\n",
+       "18                  0\n",
+       "19                  0\n",
+       "20                  0\n",
+       "21                  1\n",
+       "22                  1\n",
+       "23                  1\n",
+       "24                  1\n",
+       "25                  1"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 377,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Тransformation to 'pet_fav_flavour_list' column\n",
-    "# If there is any text (i.e., not empty or NaN), set it to 1; otherwise set it to 0\n",
-    "\n",
-    "data['pet_fav_flavour_list'] = data['pet_fav_flavour_list'].apply(\n",
-    "    lambda x: 1 if pd.notnull(x) and x != '' else 0\n",
-    ")\n",
-    "\n",
-    "# Same to the next column\n",
-    "data['pet_health_issue_list'] = data['pet_health_issue_list'].apply(\n",
-    "    lambda x: 1 if pd.notnull(x) and x != '' else 0\n",
-    ")\n",
-    "\n",
-    "\n",
-    "# Display the first few rows to check the changes\n",
-    "data[['pet_health_issue_list']].head(10)\n"
+    "data[['pet_allergen_list']].head(26)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 378,
    "metadata": {},
    "outputs": [
     {
@@ -1374,7 +1563,7 @@
        "24       1"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 378,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1399,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [
     {
@@ -1560,7 +1749,7 @@
        "24               1"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 379,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1587,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 380,
    "metadata": {},
    "outputs": [
     {
@@ -1798,7 +1987,7 @@
        "34                        1"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 380,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1813,10 +2002,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 381,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Display the first few rows to understand the dataset\n",
+    "# data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The final dataset for analytics"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "final_pet_food_dataset = 'final_pet_food_dataset.csv'\n",
+    "data.to_csv(final_pet_food_dataset, index=False)"
+   ]
   }
  ],
  "metadata": {
