--- a/ex.1/classification dataset folder/cleaning_data.ipynb
+++ b/ex.1/classification dataset folder/cleaning_data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 369,
+     "execution_count": 384,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 385,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
        "9                                    5                       127  "
       ]
      },
-     "execution_count": 370,
+     "execution_count": 385,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 386,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 387,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 388,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
        "6                      1"
       ]
      },
-     "execution_count": 373,
+     "execution_count": 388,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 389,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +887,7 @@
        "6                       0"
       ]
      },
-     "execution_count": 374,
+     "execution_count": 389,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 390,
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
        "21             1"
       ]
      },
-     "execution_count": 375,
+     "execution_count": 390,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 391,
    "metadata": {},
    "outputs": [
     {
@@ -1188,7 +1188,7 @@
        "60                         1"
       ]
      },
-     "execution_count": 376,
+     "execution_count": 391,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [
     {
@@ -1391,7 +1391,7 @@
        "25                  1"
       ]
      },
-     "execution_count": 377,
+     "execution_count": 392,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1402,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 393,
    "metadata": {},
    "outputs": [
     {
@@ -1563,7 +1563,7 @@
        "24       1"
       ]
      },
-     "execution_count": 378,
+     "execution_count": 393,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1588,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 394,
    "metadata": {},
    "outputs": [
     {
@@ -1749,7 +1749,7 @@
        "24               1"
       ]
      },
-     "execution_count": 379,
+     "execution_count": 394,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1776,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [
     {
@@ -1987,7 +1987,7 @@
        "34                        1"
       ]
      },
-     "execution_count": 380,
+     "execution_count": 395,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2002,7 +2002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 396,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2019,13 +2019,242 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 397,
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_pet_food_dataset = 'final_pet_food_dataset.csv'\n",
-    "data.to_csv(final_pet_food_dataset, index=False)"
+    "#final_pet_food_dataset = 'final_pet_food_dataset.csv'\n",
+    "#data.to_csv(final_pet_food_dataset, index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 398,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pet_id</th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>wet_food_order_number</th>\n",
+       "      <th>pet_has_active_subscription</th>\n",
+       "      <th>pet_food_tier</th>\n",
+       "      <th>pet_allergen_list</th>\n",
+       "      <th>pet_fav_flavour_list</th>\n",
+       "      <th>pet_health_issue_list</th>\n",
+       "      <th>neutered</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>pet_breed_size</th>\n",
+       "      <th>signup_promo</th>\n",
+       "      <th>ate_wet_food_pre_tails</th>\n",
+       "      <th>dry_food_brand_pre_tails</th>\n",
+       "      <th>pet_life_stage_at_order</th>\n",
+       "      <th>total_order_kcal</th>\n",
+       "      <th>total_web_sessions</th>\n",
+       "      <th>total_web_sessions_since_last_order</th>\n",
+       "      <th>total_minutes_on_website</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3.629660e+14</td>\n",
+       "      <td>1.353290e+19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6198.344</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7.068350e+14</td>\n",
+       "      <td>8.696050e+18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>47147.816</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.956960e+15</td>\n",
+       "      <td>3.215290e+17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2398.968</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>615</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3.456350e+15</td>\n",
+       "      <td>1.335340e+19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>107410.600</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>813</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4.037560e+15</td>\n",
+       "      <td>2.972400e+18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>110461.600</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>168</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         pet_id   customer_id  wet_food_order_number  \\\n",
+       "0  3.629660e+14  1.353290e+19                      0   \n",
+       "1  7.068350e+14  8.696050e+18                      0   \n",
+       "2  2.956960e+15  3.215290e+17                      0   \n",
+       "3  3.456350e+15  1.335340e+19                      1   \n",
+       "4  4.037560e+15  2.972400e+18                      0   \n",
+       "\n",
+       "   pet_has_active_subscription  pet_food_tier  pet_allergen_list  \\\n",
+       "0                            0              1                  0   \n",
+       "1                            0              1                  0   \n",
+       "2                            0              1                  0   \n",
+       "3                            1              1                  0   \n",
+       "4                            0              1                  0   \n",
+       "\n",
+       "   pet_fav_flavour_list  pet_health_issue_list  neutered  gender  \\\n",
+       "0                     1                      1         1       2   \n",
+       "1                     1                      1         0       2   \n",
+       "2                     1                      1         0       2   \n",
+       "3                     1                      1         1       2   \n",
+       "4                     1                      1         1       2   \n",
+       "\n",
+       "   pet_breed_size  signup_promo  ate_wet_food_pre_tails  \\\n",
+       "0               3             0                       1   \n",
+       "1               3             0                       0   \n",
+       "2               3             0                       1   \n",
+       "3               3             0                       0   \n",
+       "4               3             0                       0   \n",
+       "\n",
+       "   dry_food_brand_pre_tails  pet_life_stage_at_order  total_order_kcal  \\\n",
+       "0                         1                        1          6198.344   \n",
+       "1                         1                        1         47147.816   \n",
+       "2                         1                        1          2398.968   \n",
+       "3                         1                        1        107410.600   \n",
+       "4                         1                        1        110461.600   \n",
+       "\n",
+       "   total_web_sessions  total_web_sessions_since_last_order  \\\n",
+       "0                   1                                    0   \n",
+       "1                  11                                    3   \n",
+       "2                   2                                    1   \n",
+       "3                   7                                    2   \n",
+       "4                  16                                    1   \n",
+       "\n",
+       "   total_minutes_on_website  \n",
+       "0                        12  \n",
+       "1                        18  \n",
+       "2                       615  \n",
+       "3                       813  \n",
+       "4                       168  "
+      ]
+     },
+     "execution_count": 398,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
