--- a/ex.1/regression sataset folder/AutoViz.ipynb
+++ b/ex.1/regression sataset folder/AutoViz.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I tried to use this tool different ways, but without the result\n",
+    "I decided to use simular tools \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
