--- a/ex.1/regression sataset folder/Phik-matrix.ipynb
+++ b/ex.1/regression sataset folder/Phik-matrix.ipynb
@@ -1,8 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "0.0 - 0.1 → Very weak or no correlation.\n",
+    "0.1 - 0.3 → Weak correlation.\n",
+    "0.3 - 0.5 → Moderate correlation.\n",
+    "0.5 - 0.7 → Strong correlation.\n",
+    "0.7 - 1.0 → Very strong correlation."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
